update exodus training notebook

--- a/sparse-tensors-gpu/gpu-sparse-tensors.ipynb
+++ b/sparse-tensors-gpu/gpu-sparse-tensors.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import tonic\n",
-    "from tonic import datasets, transforms\n",
+    "from tonic import transforms\n",
     "import os\n",
     "import numpy as np\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,17 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This dataset has 75466 samples.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = tonic.datasets.SSC('./data', transform=transform)\n",
     "print(f\"This dataset has {len(dataset)} samples.\")"
@@ -75,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +75,7 @@
     "\n",
     "cached_dataset = tonic.DiskCachedDataset(\n",
     "            dataset=dataset,\n",
-    "            cache_path=os.path.join(f\"cache/ssc/train/{encoding_dim}/{dt}\"),\n",
+    "            cache_path=os.path.join(f\"cache/SSC/train/{encoding_dim}/{dt}\"),\n",
     "        )\n",
     "cached_dataloader = torch.utils.data.DataLoader(\n",
     "    cached_dataset, \n",
@@ -97,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,66 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e08190df7c9f4003bad7f2c5af60a840",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/589 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "    Exception ignored in: if w.is_alive():<function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "\n",
-      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "    if w.is_alive():\n",
-      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "        assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n",
-      "assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n",
-      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "Traceback (most recent call last):\n",
-      "Exception ignored in:   File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "<function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "    Traceback (most recent call last):\n",
-      "self._shutdown_workers()  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "\n",
-      "      File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "self._shutdown_workers()    \n",
-      "if w.is_alive():\n",
-      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      ":     can only test a child processif w.is_alive():\n",
-      "\n",
-      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for data, target in tqdm(cached_dataloader):\n",
     "    output = network(data.cuda())\n",
@@ -242,102 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18134ffd9fc449a7ae3113e675d1b251",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/589 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "    if w.is_alive():\n",
-      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n",
-      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "    if w.is_alive():\n",
-      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n",
-      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "    self._shutdown_workers()Exception ignored in: \n",
-      "<function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "\n",
-      "    Traceback (most recent call last):\n",
-      "if w.is_alive():  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "    if w.is_alive():\n",
-      "      File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "\n",
-      "AssertionError: can only test a child process\n",
-      "AssertionError: can only test a child process\n",
-      "Exception ignored in: Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0><function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "    \n",
-      "self._shutdown_workers()Traceback (most recent call last):\n",
-      "\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "        if w.is_alive():\n",
-      "self._shutdown_workers()  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "\n",
-      "      File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "assert self._parent_pid == os.getpid(), 'can only test a child process'    \n",
-      "if w.is_alive():AssertionError: \n",
-      "can only test a child process  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n",
-      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "    if w.is_alive():\n",
-      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n",
-      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
-      "    if w.is_alive():\n",
-      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_list = []\n",
     "target_list = []\n",
@@ -357,24 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2daa903241d4be398da2e5d8ee8c6bd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/589 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for data, target in tqdm(sparse_tensor_dataset):\n",
     "    output = network(data.to_dense())\n",
@@ -408,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
